@@ -37,6 +37,9 @@
             <setting name="ShowProcessDomains" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="WarnDangerous" serializeAs="String">
+                <value>True</value>
+            </setting>
         </ProcessHacker.Properties.Settings>
     </userSettings>
 </configuration>
